Ajustes de estilo - actualizacion de sidebar

--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -14,8 +14,8 @@
     <nav class="flex-1">
       <ul class="space-y-3">
         <li><a href="index.html" class="block p-2 rounded hover:bg-gray-700">📊 Dashboard</a></li>
-        <li><a href="proyectos.html" class="block p-2 rounded hover:bg-gray-700">🏗️ Proyectos</a></li>
-        <li><a href="reseñas.html" class="block p-2 rounded hover:bg-gray-700">📝 Reseñas</a></li>
+        <li><a href="/Admin/gestionProyectos.html" class="block p-2 rounded hover:bg-gray-700">🏗️ Proyectos</a></li>
+        <li><a href="/Admin/moderacionResenas.html" class="block p-2 rounded hover:bg-gray-700">📝 Reseñas</a></li>
         <li><a href="/Admin/admin_portafolio.html" class="block p-2 rounded hover:bg-gray-700">📂 Portafolio</a></li>
         <li><a href="blogs.html" class="block p-2 rounded hover:bg-gray-700">📰 Blogs</a></li>
         <li><a href="mensajes.html" class="block p-2 rounded hover:bg-gray-700">📨 Mensajes</a></li>
