--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -1,13 +1,16 @@
-<aside id="sidebar" 
-       class="sidebar bg-black text-white w-64 px-4 py-6 fixed inset-0 h-full z-40 
-              transform -translate-x-full transition-transform md:static md:translate-x-0 md:block"
-       style="background-color: rgb(19, 34, 28);">
+<aside id="sidebar"
+       aria-label="Menú lateral"
+       class="fixed inset-0 z-40 w-52 h-full px-4 py-6 
+              transform -translate-x-full transition-transform
+              md:static md:translate-x-0 md:block
+              bg-[rgba(23,40,33,0.944)] rounded-r-2xl">
 
   <!-- Logo -->
   <div class="flex items-center justify-center mb-8">
-    <img src="assets/img/JB-CONSTRUCTORES.png" alt="JB-CONSTRUCTORES"
-         class="h-10" style="border-radius:20px; width: 180px; height: 180px;">
-  </div>          
+    <img src="assets/img/JB-CONSTRUCTORES.png" 
+         alt="Logo JB-CONSTRUCTORES"
+         class="w-44 h-44 rounded-2xl">
+  </div>
 
   <!-- Principal -->
   <div class="space-y-1 mb-8">
@@ -19,16 +22,9 @@
   <div class="space-y-1 mb-8">
     <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
     <a href="Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Portafolio</a>
-    <a href="Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Blogs</a>
-    <a href="Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Cotizaciones</a>
-    <a href="Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Mensajes</a>
-    <a href="Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Reseñas y Calificaciones</a>
-  </div>
-
-  <!-- Administrador -->
-  <div class="space-y-1 mb-8">
-    <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Administrador</div>
-    <a href="Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Gestionar Proyectos</a>
-    <a href="Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Moderación de Reseñas</a>
+    <a href="Paginas/blogs.html"       class="block px-4 py-2 hover:bg-red-800 rounded-lg">Blogs</a>
+    <a href="Paginas/simulador.html"   class="block px-4 py-2 hover:bg-red-800 rounded-lg">Cotizaciones</a>
+    <a href="Paginas/mensajes.html"    class="block px-4 py-2 hover:bg-red-800 rounded-lg">Mensajes</a>
+    <a href="Paginas/resenas.html"     class="block px-4 py-2 hover:bg-red-800 rounded-lg">Reseñas</a>
   </div>
 </aside>
