--- a/Paginas/portafolio.html
+++ b/Paginas/portafolio.html
@@ -21,16 +21,16 @@
     <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
       ☰
   </button>
-        <div id="sidebar-container"></div> <!-- Aquí insertamos el sidebar -->
         <!-- Main content -->
         <div class="flex-1 flex flex-col overflow-hidden">
             <header class="bg-white shadow-sm">
                 <div class="flex items-center justify-between px-6 py-4">
                     <h1 class="text-xl font-semibold text-gray-800">Portafolio de JB Constructores</h1>
+                    <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Volver al inicio</button>
                 </div>
             </header>
             
-            <main class="flex-1 overflow-y-auto p-6 bg-gray-100" style="margin: 0;">
+            <main class="flex-1 overflow-y-auto p-6 bg-gray-100" style="margin: 0; min-width: 100%;">
                 <div class="mb-6">
                     <h2 class="text-2xl font-semibold text-gray-800">Nuestros Proyectos</h2>
                     <p class="text-gray-600">Aquí puedes ver algunos de nuestros trabajos más destacados.</p>
