--- a/Paginas/progresoObra.html
+++ b/Paginas/progresoObra.html
@@ -22,14 +22,18 @@
                 <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
       ☰
   </button>
-        <div id="sidebar-container"></div> <!-- Aquí insertamos el sidebar -->
         <!-- Main content -->
-            
-            <main class="flex-1 overflow-y-auto p-6 bg-gray-100">
-                <div class="mb-6">
+        <main class="flex-1 overflow-y-auto p-6 bg-gray-100">
+            <div class="mb-6">
+                <div class="flex items-center justify-between">
                     <h2 class="text-2xl font-semibold text-gray-800">Estado Actual de tu Proyecto</h2>
-                    <p class="text-gray-600">Aquí puedes ver el progreso de tu obra.</p>
+                    <button onclick="window.location.href='../index.html'" class="px-4 py-2 bg-yellow-600 text-white rounded-lg text-sm
+                            hover:bg-red-700 transition duration-200 shadow-md hover:scale-105 ease-in-out">Volver al inicio
+                    </button>
                 </div>
+                <p class="text-gray-600 mt-2">Aquí puedes ver el progreso de tu obra.</p>
+            </div>
+
                 
                 <div class="bg-white rounded-lg shadow">
                     <div class="px-6 py-4 border-b border-gray-200">
