--- a/Paginas/registro.html
+++ b/Paginas/registro.html
@@ -95,7 +95,7 @@
                 <button type="submit" class="bg-green-600 hover:bg-blue-600 text-white py-3 rounded-xl font-semibold transition transform hover:scale-105 min-w-[10rem]">
                     Registrarse
                 </button>
-                <button type="button" class="bg-gray-600 hover:bg-gray-700 text-white py-3 rounded-xl font-semibold transition transform hover:scale-105 min-w-[10rem]">
+                <button type="button" onclick="window.location.href='../index.html'" class="bg-gray-600 hover:bg-gray-700 text-white py-3 rounded-xl font-semibold transition transform hover:scale-105 min-w-[10rem]">
                     Cancelar
                 </button>
             </div>
