--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       }
       .sidebar {
         transition: all 0.3s;
+        height: fit-content;
       }
       /* Estilo pestañas nav */
       .tabs {
@@ -53,7 +54,6 @@
 <body class="bg-gray-100">
   <div class="flex h-screen">
     <div id="sidebar-container"></div> <!-- Sidebar cargado con JS -->
-
     <!-- Main content -->
     <div class="flex-1 flex flex-col overflow-hidden h-full">
       <!-- Header -->
@@ -151,4 +151,3 @@
 
 </body>
 </html>
-
