--- a/Paginas/crear_portafolio.html
+++ b/Paginas/crear_portafolio.html
@@ -8,7 +8,7 @@
 <body class="bg-gray-100 text-gray-800">
 
   <div class="max-w-3xl mx-auto p-6">
-    <h1 class="text-2xl font-bold mb-6 text-blue-900">Crear Nuevo Proyecto</h1>
+    <h1 class="text-2xl font-bold mb-6 text-blue-900">Agregar Proyecto al Portafolio</h1>
 
     <form class="bg-white p-6 rounded-lg shadow space-y-4">
       <div>
