--- a/Paginas/editar_portafolio.html
+++ b/Paginas/editar_portafolio.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="flex justify-between">
-        <a href="index.html" class="px-4 py-2 bg-gray-400 text-white rounded-xl hover:bg-gray-500">Cancelar</a>
+        <a href="admin_portafolio.html" class="px-4 py-2 bg-gray-400 text-white rounded-xl hover:bg-gray-500">Cancelar</a>
         <button type="submit" class="px-6 py-2 bg-green-600 text-white rounded-xl hover:bg-green-700">Actualizar</button>
       </div>
     </form>
