--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -7,24 +7,31 @@
 
   <!-- Logo -->
   <div class="flex items-center justify-center mb-8">
-    <img src="assets/img/JB-CONSTRUCTORES.png" 
+    <img src="../assets/img/JB-CONSTRUCTORES.png" 
          alt="Logo JB-CONSTRUCTORES"
-         class="w-44 h-44 rounded-2xl">
+         class="w-44 h-44 rounded-2xl"
+         onerror="this.onerror=null;this.src='assets/img/JB-CONSTRUCTORES.png';">
   </div>
 
   <!-- Principal -->
   <div class="space-y-1 mb-8">
     <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Principal</div>
-    <a href="index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Inicio</a>
+    <a href="index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">Inicio</a>
+
   </div>
 
   <!-- Servicios -->
   <div class="space-y-1 mb-8">
-    <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
-    <a href="Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg">Portafolio</a>
-    <a href="Paginas/blogs.html"       class="block px-4 py-2 hover:bg-red-800 rounded-lg">Blogs</a>
-    <a href="Paginas/simulador.html"   class="block px-4 py-2 hover:bg-red-800 rounded-lg">Cotizaciones</a>
-    <a href="Paginas/mensajes.html"    class="block px-4 py-2 hover:bg-red-800 rounded-lg">Mensajes</a>
-    <a href="Paginas/resenas.html"     class="block px-4 py-2 hover:bg-red-800 rounded-lg">Reseñas</a>
+  <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
+    <a href="Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📂 Portafolio</a>
+    <a href="Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📰 Blogs</a>
+    <a href="Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">Cotizaciones</a>
+    <a href="Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📨 Mensajes</a>
+    <a href="Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📝 Reseñas</a>
+    <a href="Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">🏗️ Proyectos</a>
+    <a href="usuarios.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">👥 Usuarios</a>
+    <a href="facturacion.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">💰 Facturación</a>
+    <a href="config.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">⚙️ Configuración</a>
+    <a href="Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">Reseñas</a>
   </div>
 </aside>
