--- a/Paginas/eliminar_portafolio.html
+++ b/Paginas/eliminar_portafolio.html
@@ -13,7 +13,7 @@
     <p class="text-gray-600 mb-6">Esta acción no se puede deshacer. ¿Seguro que deseas eliminar el proyecto <span class="font-semibold">"Proyecto de Ejemplo"</span>?</p>
     
     <div class="flex justify-center gap-4">
-      <a href="index.html" class="px-4 py-2 bg-gray-400 text-white rounded-xl hover:bg-gray-500">Cancelar</a>
+      <a href="admin_portafolio.html" class="px-4 py-2 bg-gray-400 text-white rounded-xl hover:bg-gray-500">Cancelar</a>
       <button class="px-6 py-2 bg-red-600 text-white rounded-xl hover:bg-red-700">Eliminar</button>
     </div>
   </div>
