--- a/Paginas/inicioSesion.html
+++ b/Paginas/inicioSesion.html
@@ -74,7 +74,7 @@
             </div>
 
             <button type="submit"
-                class="w-full bg-green-600 hover:bg-blue-600 text-white py-3 rounded-xl font-semibold transition transform hover:scale-105" onclick="window.location.href='../Admin/admin.html'">
+                class="w-full bg-green-600 hover:bg-blue-600 text-white py-3 rounded-xl font-semibold transition transform hover:scale-105" onclick="window.location.href='../Paginas/admin.html'">
                 Iniciar Sesión
             </button>
 
