--- a/Paginas/portafolio.html
+++ b/Paginas/portafolio.html
@@ -24,6 +24,7 @@
             <header class="bg-white shadow-sm">
                 <div class="flex items-center justify-between px-6 py-4">
                     <h1 class="text-xl font-semibold text-gray-800">Portafolio de JB Constructores</h1>
+                    <a href="admin_portafolio.html" class="px-3 py-1 bg-blue-600 text-white rounded-lg text-sm hover:bg-blue-700 transition duration-200 mr-2">Administrar Portafolio</a>
                     <button onclick="window.location.href='../index.html'" class="px-3 py-1 bg-yellow-600 text-white rounded-lg text-sm hover:bg-red-700 transition duration-200">Volver al inicio</button>
                 </div>
             </header>
