--- a/Paginas/registro.html
+++ b/Paginas/registro.html
@@ -42,15 +42,16 @@
         <form class="relative z-10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
-                <div class="md:col-span-2">
-                    <label class="block text-gray-700 font-medium mb-2">Nombre Completo</label>
-                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                <div>
+                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required placeholder="Nombres">
+                </div>
+                <div>
+                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required placeholder="Apellidos">
                 </div>
 
                 <div>
-                    <label class="block text-gray-700 font-medium mb-2">Tipo de Documento</label>
                     <select class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
-                        <option value="">Seleccione</option>
+                        <option value="">Tipo de Documento</option>
                         <option>Cédula de Ciudadanía</option>
                         <option>Cédula de Extranjería</option>
                         <option>Pasaporte</option>
@@ -59,28 +60,23 @@
                 </div>
 
                 <div>
-                    <label class="block text-gray-700 font-medium mb-2">Número de Documento</label>
-                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required placeholder="Ingrese su número de documento">
                 </div>
 
                 <div>
-                    <label class="block text-gray-700 font-medium mb-2">Celular</label>
-                    <input type="tel" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                    <input type="tel" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required placeholder="Número de Teléfono">
                 </div>
 
                 <div>
-                    <label class="block text-gray-700 font-medium mb-2">Correo Electrónico</label>
-                    <input type="email" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                    <input type="email" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required placeholder="Correo Electrónico">
                 </div>
 
                 <div>
-                    <label class="block text-gray-700 font-medium mb-2">Nombre de Usuario</label>
-                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                    <input type="text" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required placeholder="Crea un usuario">
                 </div>
 
                 <div>
-                    <label class="block text-gray-700 font-medium mb-2">Contraseña</label>
-                    <input type="password" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required>
+                    <input type="password" class="w-full border border-green-300 rounded-xl p-3 focus:ring-2 focus:ring-green-500" required placeholder="Crea una contraseña">
                 </div>
 
                 <div class="md:col-span-2">
