--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -16,16 +16,16 @@
   <!-- Principal -->
   <div class="space-y-1 mb-8">
     <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Principal</div>
-    <a href="index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">Inicio</a>
+    <a href="index.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">🏠 Inicio</a>
 
   </div>
 
   <!-- Servicios -->
   <div class="space-y-1 mb-8">
   <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
+    <a href="Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">💸 Cotizaciones</a>
     <a href="Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📂 Portafolio</a>
     <a href="Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📰 Blogs</a>
-    <a href="Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">Cotizaciones</a>
     <a href="Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📨 Mensajes</a>
     <a href="Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📝 Reseñas</a>
     <a href="Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">🏗️ Proyectos</a>
