--- a/Paginas/simulador.html
+++ b/Paginas/simulador.html
@@ -14,7 +14,7 @@
   <style>body { font-family:'Roboto',sans-serif; }</style>
 </head>
 
-<body class="bg-teal-50 w-fit mx-auto">
+<body class="bg-teal-50 w-fit min-content">
   <div id="app-container" class="origin-top w-full">
     <!-- HEADER -->
 <header class="bg-[rgb(240_253_250_/_var(--tw-bg-opacity,1))]">
@@ -32,8 +32,8 @@
       <div class="w-full max-w-5xl" style="margin-top: -1.9rem;">
         <p class="text-teal-700 text-2xl font-bold text-center my-8" id="simulador-titulo"></p>
 
-      <form id="formCotizacion"
-          class="bg-teal-50 rounded-xl p-4 sm:p-4 w-[99%] sm:w-[95%] lg:max-w-5xl mx-auto">
+    <form id="formCotizacion"
+      class="bg-teal-50 rounded-xl p-[0.2rem] sm:p-[0.2rem] w-[80%] sm:w-[89%] lg:max-w-5xl mx-auto">
 
           <!-- SECCIÓN DATOS Y SERVICIOS CON BORDE -->
           <div class="border-2 border-teal-400 rounded-xl p-4 space-y-10 bg-white/70">
