--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -1,17 +1,18 @@
-<aside id="sidebar"
-       aria-label="Menú lateral"
-       class="fixed inset-0 z-40 w-52 h-full px-4 py-6 
-              transform -translate-x-full transition-transform
-              md:static md:translate-x-0 md:block
-              bg-[rgba(23,40,33,0.944)] rounded-r-2xl">
+  <aside id="sidebar"
+        aria-label="Menú lateral"
+        class="fixed inset-0 z-40 w-52 px-4 pt-4 pb-6
+                transform -translate-x-full transition-transform
+                md:static md:translate-x-0 md:block
+                bg-[rgba(23,40,33,0.944)] rounded-r-2xl">
 
-  <!-- Logo -->
-  <div class="flex items-center justify-center mb-8">
-    <img src="../assets/img/JB-CONSTRUCTORES.png" 
-         alt="Logo JB-CONSTRUCTORES"
-         class="w-44 h-44 rounded-2xl"
-         onerror="this.onerror=null;this.src='assets/img/JB-CONSTRUCTORES.png';">
-  </div>
+    <!-- Logo -->
+    <div class="flex items-center justify-center mb-6">
+      <img src="../assets/img/JB-CONSTRUCTORES.png"
+          alt="Logo JB-CONSTRUCTORES"
+          class="w-26 h-26 rounded-full border-4 border-teal-500 shadow-md object-cover"
+          onerror="this.onerror=null;this.src='assets/img/JB-CONSTRUCTORES.png';">
+    </div>
+
 
   <!-- Principal -->
   <div class="space-y-1 mb-8">
