--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
       }
     </style>
 </head>
+
 <body class="bg-gray-100">
-  <div class="flex h-screen">
+  <div class="flex min-h-screen">
     <div id="sidebar-container"></div> <!-- Sidebar cargado con JS -->
+
     <!-- Main content -->
-    <div class="flex-1 flex flex-col overflow-hidden h-full">
+    <div class="flex-1 flex flex-col h-full">
       <!-- Header -->
-<header class="bg-white shadow-sm">
+      <header class="bg-transparent shadow-none">
   <div class="px-6 py-4">
     <!-- Encabezado -->
     <div class="flex flex-col sm:flex-row items-center sm:items-start justify-between mb-2 text-center sm:text-left">
