Funciones del JS

--- a/Encabezado_Pie/sidebar.html
+++ b/Encabezado_Pie/sidebar.html
@@ -1,9 +1,10 @@
   <aside id="sidebar"
         aria-label="Menú lateral"
-        class="fixed inset-0 z-40 w-52 px-4 pt-4 pb-6
+        class="fixed inset-0 z-40 w-52 h-screen px-4 pt-4 pb-6
                 transform -translate-x-full transition-transform
                 md:static md:translate-x-0 md:block
                 bg-[rgba(23,40,33,0.944)] rounded-r-2xl">
+
 
     <!-- Logo -->
     <div class="flex items-center justify-center mb-6">
@@ -24,15 +25,10 @@
   <!-- Servicios -->
   <div class="space-y-1 mb-8">
   <div class="text-red-400 text-xs uppercase font-semibold px-2 mb-2">Servicios</div>
-    <a href="Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">💸 Cotizaciones</a>
+    <a href="Paginas/simulador.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">💸 Cotización</a>
     <a href="Paginas/portafolio.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📂 Portafolio</a>
     <a href="Paginas/blogs.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📰 Blogs</a>
     <a href="Paginas/mensajes.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📨 Mensajes</a>
     <a href="Paginas/resenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">📝 Reseñas</a>
-    <a href="Paginas/gestionProyectos.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">🏗️ Proyectos</a>
-    <a href="usuarios.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">👥 Usuarios</a>
-    <a href="facturacion.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">💰 Facturación</a>
-    <a href="config.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">⚙️ Configuración</a>
-    <a href="Paginas/moderacionResenas.html" class="block px-4 py-2 hover:bg-red-800 rounded-lg text-green-300">Reseñas</a>
   </div>
 </aside>
