--- a/Paginas/gestionProyectos.html
+++ b/Paginas/gestionProyectos.html
@@ -18,13 +18,9 @@
 <body class="bg-gray-50">
         <body class="bg-gray-50">
         <div class="flex h-screen">
-                <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
-      ☰
-  </button>
-        
         <!-- Main content -->
-        <div class="flex-1 flex flex-col overflow-hidden">
-            <header class="bg-white shadow-sm">
+        <div class="flex-1 flex flex-col overflow-hidden bg-transparent shadow-none">
+            <header class="bg-transparent border-b-[3px] border-[#161a7e] shadow-none">
                 <div class="flex items-center justify-between px-6 py-4">
                     <h1 class="text-xl font-semibold text-gray-800">Gestión de Proyectos</h1>
                     <button class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700"
