--- a/Paginas/moderacionResenas.html
+++ b/Paginas/moderacionResenas.html
@@ -17,17 +17,12 @@
 <body class="bg-gray-50">
 
   <div class="flex h-screen">
-    <!-- Botón toggle solo en móviles -->
-    <button id="menu-toggle"
-            class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
-      ☰
-    </button>
 
     <!-- Contenido principal -->
     <div class="flex-1 flex flex-col overflow-hidden">
 
       <!-- Encabezado -->
-      <header class="bg-white shadow-sm">
+      <header class="bg-transparent border-b-[3px] border-[#161a7e] shadow-none">
         <div class="flex items-center justify-between px-6 py-4">
           <h1 class="text-2xl font-semibold text-gray-800">Moderación de Reseñas</h1>
         </div>
