--- a/Paginas/nuevoProyecto.html
+++ b/Paginas/nuevoProyecto.html
@@ -16,14 +16,9 @@
     </style>
 </head>
 <body class="bg-gray-50">
-
-    <div class="flex h-screen">
-            <button id="menu-toggle" class="p-2 bg-teal-800 text-white fixed top-4 right-4 z-50 md:hidden">
-      ☰
-  </button>
     <!-- Main content -->
-        <div class="flex-1 flex flex-col overflow-hidden">
-            <header class="bg-white shadow-sm">
+        <div class="flex-1 flex flex-col overflow-hidden bg-transparent shadow-none">
+            <header class="bg-transparent shadow-none">
                 <div class="flex items-center justify-between px-6 py-4">
                     <h1 class="text-xl font-semibold text-gray-800">Nuevo Proyecto</h1>
                 </div>
