--- a/Paginas/resenas.html
+++ b/Paginas/resenas.html
@@ -25,7 +25,7 @@
 <body class="bg-gradient-to-b from-green-100 via-blue-50 to-blue-100 min-h-screen flex flex-col">
 
     <!-- Encabezado original sin cambios -->
-    <header class="bg-white shadow-sm">
+    <header class="bg-transparent shadow-none">
         <div class="flex items-center justify-between px-6 py-4">
             <h1 class="text-xl font-semibold text-gray-800">Reseñas y Calificaciones</h1>
             <button onclick="window.location.href='../index.html'" 
