--- a/Paginas/simulador.html
+++ b/Paginas/simulador.html
@@ -11,20 +11,51 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css" />
-  <style>body { font-family:'Roboto',sans-serif; }</style>
+  <style>
+    .input-estilo {
+      width: 100%;
+      height: 3rem; /* Equivale a h-12 */
+      padding: 0 1rem; /* px-4 */
+      margin-top: 0.25rem; /* mt-1 */
+      border-radius: 0.375rem; /* rounded-md */
+      border: 1px solid #81E6D9; /* border-teal-300 */
+      background-color: #F0FDFA; /* bg-teal-50 */
+      color: #0F766E; /* text-teal-700 */
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); /* shadow-sm */
+      transition: all 0.15s ease-in-out;
+    }
+
+    .input-estilo::placeholder {
+      color: #5EEAD4; /* placeholder-teal-500 */
+    }
+
+    .input-estilo:focus {
+      outline: none;
+      border-color: #14B8A6; /* border-teal-500 */
+      box-shadow: 0 0 0 2px rgba(20, 184, 166, 0.4); /* focus:ring */
+    }
+
+    textarea.input-estilo {
+      height: auto;
+      padding-top: 0.75rem;
+      padding-bottom: 0.75rem;
+      resize: none;
+    }
+</style>
 </head>
 
 <body class="min-h-screen w-full overflow-x-hidden bg-gradient-to-b from-green-100 via-blue-50 to-blue-100">
   <div id="app-container" class="origin-top w-full">
+
     <!-- HEADER -->
-    <header class="bg-white border-b-4 border-sky-300 shadow-sm">
-      <div class="flex flex-col md:flex-row items-center justify-between px-6 py-4 gap-4">
-        <h1 class="text-2xl font-bold text-teal-700 text-center md:text-left">
+    <header class="bg-transparent border-b-[3px] border-[#161a7e] shadow-none">
+      <div class="w-full max-w-5xl mx-auto flex flex-col md:flex-row items-center justify-between px-6 py-6 gap-4">
+        <h1 class="text-3xl font-bold text-teal-700 text-center md:text-left">
           SIMULADOR DE COTIZACIÓN
         </h1>
         <button 
           onclick="window.location.href='../index.html'" 
-          class="px-4 py-2 bg-teal-600 text-white rounded-lg text-base font-semibold hover:bg-teal-700 transition duration-200"
+          class="px-5 py-2 bg-teal-600 text-white rounded-lg text-base font-semibold hover:bg-teal-700 transition duration-200"
         >
           Volver al inicio
         </button>
@@ -37,149 +68,84 @@
         <p class="text-teal-700 text-2xl font-bold text-center my-8" id="simulador-titulo"></p>
 
         <!-- FORMULARIO -->
-    <form id="formCotizacion" class="contenedor-principal">
+        <form id="formCotizacion" class="contenedor-principal">
 
-      <!-- SECCIÓN DATOS Y SERVICIOS CON BORDE -->
-      <div class="border-2 border-teal-400 rounded-xl p-4 space-y-10 bg-white">
+          <!-- SECCIÓN DATOS Y SERVICIOS CON BORDE -->
+          <div class="border border-teal-300 rounded-2xl p-6 space-y-10 bg-white shadow-md">
 
-        <!-- DATOS GENERALES -->
-        <section>
-          <h2 class="text-center font-medium text-teal-700 mb-6 text-2xl">Datos Generales</h2>
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <!-- DATOS GENERALES -->
+            <section>
+              <h2 class="text-center font-semibold text-teal-700 mb-6 text-2xl">Datos Generales</h2>
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
 
-            <div>
-              <input type="text" id="nombre"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500"
-                placeholder="Nombre">
+                <input type="text" id="nombre" class="input-estilo" placeholder="Nombre">
+                <input type="text" id="apellido" class="input-estilo" placeholder="Apellido">
+
+                <select id="tipoDocumento" class="input-estilo">
+                  <option value="">Tipo de Documento</option>
+                  <option value="dni">DNI</option>
+                  <option value="cedula">Cédula</option>
+                  <option value="pasaporte">Pasaporte</option>
+                  <option value="otro">Otro</option>
+                </select>
+
+                <input type="text" id="numeroDocumento" class="input-estilo" placeholder="Número de Documento">
+                <input type="email" id="correo" class="input-estilo" placeholder="Correo Electrónico">
+                <input type="tel" id="contacto" class="input-estilo" placeholder="Número de Contacto">
+                <input type="text" id="ubicacion" class="input-estilo" placeholder="Departamento - Ciudad">
+                <input type="text" id="direccion" class="input-estilo" placeholder="Dirección del Proyecto">
+
+                <select id="tipoProyecto" class="input-estilo">
+                  <option value="">Tipo de Proyecto</option>
+                  <option value="residencial">Residencial</option>
+                  <option value="comercial">Comercial</option>
+                  <option value="industrial">Industrial</option>
+                  <option value="otros">Otros</option>
+                </select>
+
+                <input type="date" id="fechaInicio" class="input-estilo">
+
+                <div class="md:col-span-2">
+                  <textarea id="descripcion" rows="3" class="input-estilo resize-none" placeholder="Descripción del trabajo a realizar"></textarea>
+                </div>
+              </div>
+            </section>
+
+            <!-- CONTACTO PERSONALIZADO -->
+            <div class="flex flex-col md:flex-row items-center gap-4 bg-teal-50 border border-teal-200 rounded-lg p-6 mt-6">
+              <label for="contactoPersonalizado" class="text-teal-800 font-medium flex-1">
+                ¿Deseas que te contactemos para una valoración personalizada del servicio?
+              </label>
+              <div class="flex items-center gap-2">
+                <input type="checkbox" id="contactoPersonalizado" name="contactoPersonalizado"
+                  class="h-5 w-5 text-teal-600 border-teal-400 rounded focus:ring-teal-300">
+                <span class="text-teal-700">Sí, deseo ser contactado</span>
+              </div>
             </div>
-
-            <div>
-              <input type="text" id="apellido"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500"
-                placeholder="Apellido">
-            </div>
-
-            <div>
-              <select id="tipoDocumento"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700">
-                <option value="">Tipo de Documento</option>
-                <option value="dni">DNI</option>
-                <option value="cedula">Cédula</option>
-                <option value="pasaporte">Pasaporte</option>
-                <option value="otro">Otro</option>
-              </select>
-            </div>
-
-            <div>
-              <input type="text" id="numeroDocumento"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500" placeholder="Número de Documento">
-            </div>
-
-            <div>
-              <input type="email" id="correo"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500"
-                placeholder="Correo Electrónico">
-            </div>
-
-            <div>
-              <input type="tel" id="contacto"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500"
-                placeholder="Número de Contacto">
-            </div>
-
-            <div>
-              <input type="text" id="ubicacion"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500"
-                placeholder="Departamento - Ciudad">
-            </div>
-
-            <div>
-              <input type="text" id="direccion"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700 placeholder-teal-500"placeholder="Dirección del Proyecto">
-            </div>
-
-            <div>
-              <select id="tipoProyecto"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700">
-                <option value="">Tipo de Proyecto</option>
-                <option value="residencial">Residencial</option>
-                <option value="comercial">Comercial</option>
-                <option value="industrial">Industrial</option>
-                <option value="otros">Otros</option>
-              </select>
-            </div>
-
-            <div>
-              <input type="date" id="fechaInicio"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md h-12 px-3
-                       text-teal-700">
-            </div>
-
-            <div class="md:col-span-2">
-              <textarea id="descripcion"
-                class="mt-1 block w-full border-2 border-teal-400 rounded-md px-3
-                       text-teal-700 placeholder-teal-500"
-                rows="3" placeholder="Descripción del trabajo a realizar"></textarea>
-            </div>
-
-          </div>
-        </section>
-
-        <!-- CONTACTO PERSONALIZADO -->
-        <div
-          class="flex flex-col md:flex-row items-center gap-4 bg-teal-50 border border-teal-200 rounded-lg p-6 mt-6">
-          <label for="contactoPersonalizado" class="text-teal-800 font-medium flex-1">
-            ¿Deseas que te contactemos para una valoración personalizada del servicio?
-          </label>
-          <div class="flex items-center gap-2">
-            <input type="checkbox" id="contactoPersonalizado" name="contactoPersonalizado"
-              class="h-5 w-5 text-teal-600 border-teal-400 rounded focus:ring-teal-300">
-            <span class="text-teal-700">Sí, deseo ser contactado</span>
-          </div>
-        </div>
 
             <!-- SERVICIOS -->
             <section>
-              <h2 class="text-center font-medium text-teal-700 mb-6 text-2xl">
+              <h2 class="text-center font-semibold text-teal-700 mb-6 text-2xl">
                 Selecciona los Servicios y sus m²
               </h2>
               
               <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                <div class="bg-teal-100 rounded-lg p-6 flex flex-col border-2 border-teal-400">
+                <div class="bg-teal-100 rounded-xl p-6 flex flex-col border border-teal-300 shadow-sm">
                   <h3 class="text-teal-700 font-semibold mb-4 text-center">Obra Negra</h3>
                   <div id="obraNegraOpciones" class="space-y-3 flex-1"></div>
                 </div>
 
-                <div class="bg-teal-100 rounded-lg p-6 flex flex-col border-2 border-teal-400">
+                <div class="bg-teal-100 rounded-xl p-6 flex flex-col border border-teal-300 shadow-sm">
                   <h3 class="text-teal-700 font-semibold mb-4 text-center">Obra Blanca</h3>
                   <div id="obraBlancaOpciones" class="space-y-3 flex-1"></div>
                 </div>
 
-                <div class="bg-teal-100 rounded-lg p-6 flex flex-col border-2 border-teal-400">
+                <div class="bg-teal-100 rounded-xl p-6 flex flex-col border border-teal-300 shadow-sm">
                   <h3 class="text-teal-700 font-semibold mb-4 text-center">Mantenimiento</h3>
                   <div id="mantenimientoOpciones" class="space-y-3 flex-1"></div>
                 </div>
               </div>
             </section>
-
-            <style>
-              /* Todos los inputs numéricos dentro de las tarjetas tendrán 3rem de ancho */
-              #obraNegraOpciones input[type="number"],
-              #obraBlancaOpciones input[type="number"],
-              #mantenimientoOpciones input[type="number"] {
-                width: 3rem;
-                text-align: center;
-              }
-            </style>
 
             <div class="flex justify-center">
               <button type="submit" class="w-full max-w-lg bg-teal-600 text-white px-6 py-3 rounded-md hover:bg-teal-700 transition text-lg font-semibold flex items-center justify-center h-14">
@@ -187,11 +153,23 @@
               </button>
             </div>
           </div>
-          <!-- FIN SECCIÓN CON BORDE -->
         </form>
       </div>
     </main>
   </div>
+
+  <!-- ESTILOS REUTILIZABLES -->
+  <style>
+
+    /* Todos los inputs numéricos dentro de las tarjetas tendrán 3rem de ancho */
+    #obraNegraOpciones input[type="number"],
+    #obraBlancaOpciones input[type="number"],
+    #mantenimientoOpciones input[type="number"] {
+      width: 3rem;
+      text-align: center;
+    }
+  </style>
+
   <script src="../Scripts/main.js"></script>
 </body>
 </html>
