--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JB Constructores - Construcción y Mantenimiento</title>
     <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon" />
-    
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="stylesheet" href="assets/css/style.css"/>
     <style>
 
@@ -59,7 +57,7 @@
     <div class="flex-1 flex flex-col h-full">
       <!-- Header -->
       <header class="bg-transparent shadow-none">
-  <div class="px-6 py-4">
+  <div class="px-6 pt-4 pb-0">
     <!-- Encabezado -->
     <div class="flex flex-col sm:flex-row items-center sm:items-start justify-between mb-2 text-center sm:text-left">
       <!-- Texto -->
@@ -81,17 +79,17 @@
           class="px-3 py-1 bg-green-600 text-white rounded-lg text-sm hover:bg-green-700 transition duration-200">
           Registrarse
         </button>
-                <!-- Botón hamburguesa visible solo en móviles -->
-        <button id="menu-toggle" class="md:hidden p-2 text-white bg-gray-800">
-          &#9776; <!-- Icono hamburguesa -->
-        </button>
+    <button id="menu-toggle" class="md:hidden p-2 w-[2.3rem] text-white bg-gray-800 transition-colors duration-300">
+      &#9776;
+    </button>
+
       </div>
     </div>
   </div>
 </header>
 
   <!-- Navegación pestañas -->
-  <nav class="tabs px-6 mt-2 text-base md:text-lg flex flex-col sm:flex-row sm:gap-4 gap-2">
+  <nav class="tabs px-6 mt-2 text-base md:text-lg flex flex-col sm:flex-row sm:gap-3 gap-1">
     <button class="active" data-tab="obra-negra">Obra Negra</button>
     <button data-tab="obra-blanca">Obra Blanca</button>
     <button data-tab="mantenimiento">Mantenimiento</button>
@@ -106,8 +104,9 @@
         <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">
           Obra Negra
         </h2>
-        <div id="obra-negra-section" 
-            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full"></div>
+        <div id="obra-negra-section"
+            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-4 max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+        </div>
       </section>
 
       <section id="obra-blanca" class="tab-content hidden w-full">
@@ -115,7 +114,7 @@
           Obra Blanca
         </h2>
         <div id="obra-blanca-section" 
-            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full"></div>
+            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-4 max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
       </section>
 
       <section id="mantenimiento" class="tab-content hidden w-full">
@@ -123,7 +122,7 @@
           Mantenimiento
         </h2>
         <div id="mantenimiento-section" 
-            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-full"></div>
+            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 2xl:grid-cols-5 gap-4 max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
       </section>
       </main>
     </div>
